	die Änderungen sieht.

	* phonebook: Caching der Ortskennzahl

	* sipnames: Sequentielles Eintragen der erzeugten Nummern

2007-07-08:

	* telefonbuch.sh: Rückwärtsuche bei dastelefonbuch.de an geändertes
	Webseitenformat angepasst

	* fonbuch.txt: Abfrage des AVM-Telefonbuchs repariert (Refresh fehlte)
	
	callmonitor 1.9.7 veröffentlicht

2007-07-14:

	* google.sh: Vorwahlsuche bei Google repariert

	* testlookup.sh: Einfache Seite, um alle Rückwärtssuche-Provider
	zu testen

	* telefonbuch: Auf wget umgestellt, um zuverlässiger eine
	Antwort zu bekommen
	
	* callmonitor.cfg: Default-Provider auf dasoertliche geändert

2007-07-21:

	* reverse.sh: Unterscheide besser zwischen "Teilnehmer nicht gefunden"
	und Fehler bei der Abfrage: Nur "nicht gefunden" wird gecachet.

	Immer die busybox-Version von 'nc' verwenden. (Es gibt jetzt ein
	netcat-Paket im ds-mod, dessen 'nc' sich anders verhält.)

2007-07-28:

	callmonitor 1.10 veröffentlicht

	* telefonbuch.sh: Verbessert für den Fall, dass es zwei oder mehr
	Suchergebnisse gibt

	* dasoertliche.sh: Findet jetzt auch Einträge, die wie manche
	Firmeneinträge besonders hervorgehoben sind.

2007-08-11:

	* callmonitor: Rückwärtssuche-Cache bei Neustart des Callmonitors
	löschen (um vermeintliche Fehler aufgrund geänderter
	Rückwärtssuche-Parameter zu vermeiden)

2007-08-12:

	callmonitor 1.10.1 veröffentlicht

2007-08-18:

	* maint.cgi: Button, um den Rückwärtssuche-Cache manuell zu leeren.

	* rc.callmonitor: Listener-Konversioncode entfernt (für Format vor
	v1.0; wer so einen alten Callmonitor immer noch benutzt, ist selbst
	schuld ;-))

2007-09-15:

	* config: "config wlan [on|off]" repariert

	callmonitor 1.10.2 veröffentlicht

2007-09-22:

	* config.sh: Neue Funktion "pushservice", um genau den sofort
	auszulösen.

2007-10-07:

	* messages.sh: xboxmessage verträgt neben Kommas auch keine
	Semikolons, werden nun durch Punkt ersetzt (Danke an macknight)